Made some mobile vview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FT Umrah</title>
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/logo%201.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +21,7 @@
     <header class="header" id="header">
       <nav class="navbar container">
         <div class="nav-title">
-          <img src="assets/logo 1.png" alt="" />
+          <img src="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/logo%201.png" alt="" />
           <h1>UMRAH</h1>
         </div>
         <ul class="nav-item">
@@ -73,15 +78,15 @@
         <h4>Program Studi</h4>
         <div class="cards">
           <div class="card">
-            <img src="assets/electro.png" alt="" />
+            <img src="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/electro.png" alt="" />
             <p>Teknik Elektro</p>
           </div>
           <div class="card">
-            <img src="assets/informatika.png" alt="" />
+            <img src="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/informatika.png" alt="" />
             <p>Teknik Informatika</p>
           </div>
           <div class="card">
-            <img src="assets/perkapalan.png" alt="" />
+            <img src="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/perkapalan.png" alt="" />
             <p>Teknik Perkapalan</p>
           </div>
         </div>
@@ -122,7 +127,7 @@
         <h5>Rektor UMRAH</h5>
         <div class="rektor-group">
           <div class="rektor-card">
-            <img src="assets/rektor.png" alt="" />
+            <img src="https://raw.githubusercontent.com/oriastanjung/Fakultas-Web-Promotion/main/assets/rektor.png" alt="" />
           </div>
           <div class="rektor-desc">
             <h6>Prof. Dr. Agung Dhamar Syakti, S.Pi., DEA</h6>
@@ -161,7 +166,7 @@
             <p>Pertanyaan</p>
             <textarea name="pertanyaan" id="pertanyaan" >
             </textarea>
-          </div>\
+          </div>
           <div class="center-btn">
             <button class="btn-contact">
               Send Message
