--- a/index.html
+++ b/index.html
@@ -35,29 +35,34 @@
             <a href="#contact">Contact us</a>
           </li>
         </ul>
+        <span class="list-white">
+          <img src="https://icon-library.com/images/white-hamburger-menu-icon/white-hamburger-menu-icon-24.jpg" alt="" srcset="">
+      </span>
         <div class="nav-right">
           <h2>Fakultas Teknik</h2>
         </div>
       </nav>
-      <section class="hero container">
-        <div class="hero-left">
-          <h3>
-            Place Where <span class="hero-left-bolder">GREAT</span> People Are
-            Made
-          </h3>
-        </div>
-        <div class="hero-right">
-          <div class="desc">
-            <p>
-              To become a competitive center of excellence for higher education,
-              research and maritime tourism in ASEAN
-            </p>
-            <button class="btn-hero">See More</button>
-          </div>
-        </div>
-      </section>
+      
     </header>
+    <section class="hero container-hero">
+      <div class="hero-left">
+        <h3>
+          Place Where <span class="hero-left-bolder">GREAT</span> People Are
+          Made
+        </h3>
+      </div>
+      <div class="hero-right">
+        <div class="desc">
+          <p>
+            To become a competitive center of excellence for higher education,
+            research and maritime tourism in ASEAN
+          </p>
+          <button class="btn-hero">See More</button>
+        </div>
+      </div>
+    </section>
     <main class="container">
+      
       <div class="video-ft">
         <iframe
           src="https://www.youtube.com/embed/LYhi9VHGUZM?controls=0&autoplay=0"
@@ -178,5 +183,7 @@
     <footer>
       Copyright 2022 | All Right Reserved | O. Riastanjung | 2001020039
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
